tests/baselines/reference/undefinedIsSubtypeOfEverything.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(8,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D0' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(12,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'DA' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(16,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D1' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(20,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D1A' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(25,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D2' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(29,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D2A' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(34,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D3' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(38,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D3A' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(43,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D4' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(47,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D5' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(52,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D6' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(56,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D7' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(61,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D8' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(68,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D9' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(73,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D10' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(78,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D11' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(86,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D12' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(95,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D13' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(100,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D14<T>' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(105,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D15<T, U>' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(114,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D16' must use 'declare' to make it ambient.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts(119,5): error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D17' must use 'declare' to make it ambient.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/undefinedIsSubtypeOfEverything.ts (22 errors) ====
    // undefined is a subtype of every other types, no errors expected below
    
    class Base {
        foo: typeof undefined;
    } 
    
    class D0 extends Base {
        foo: any;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D0' must use 'declare' to make it ambient.
    }
    
    class DA extends Base {
        foo: typeof undefined; 
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'DA' must use 'declare' to make it ambient.
    }
    
    class D1 extends Base {
        foo: string;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D1' must use 'declare' to make it ambient.
    }
    
    class D1A extends Base {
        foo: String;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D1A' must use 'declare' to make it ambient.
    }
    
    
    class D2 extends Base {
        foo: number;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D2' must use 'declare' to make it ambient.
    }
    
    class D2A extends Base {
        foo: Number;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D2A' must use 'declare' to make it ambient.
    }
    
    
    class D3 extends Base {
        foo: boolean;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D3' must use 'declare' to make it ambient.
    }
    
    class D3A extends Base {
        foo: Boolean;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D3A' must use 'declare' to make it ambient.
    }
    
    
    class D4 extends Base {
        foo: RegExp;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D4' must use 'declare' to make it ambient.
    }
    
    class D5 extends Base {
        foo: Date;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D5' must use 'declare' to make it ambient.
    }
    
    
    class D6 extends Base {
        foo: number[];
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D6' must use 'declare' to make it ambient.
    }
    
    class D7 extends Base {
        foo: { bar: number };
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D7' must use 'declare' to make it ambient.
    }
    
    
    class D8 extends Base {
        foo: D7;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D8' must use 'declare' to make it ambient.
    }
    
    interface I1 {
        bar: string;
    }
    class D9 extends Base {
        foo: I1;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D9' must use 'declare' to make it ambient.
    }
    
    
    class D10 extends Base {
        foo: () => number;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D10' must use 'declare' to make it ambient.
    }
    
    enum E { A }
    class D11 extends Base {
        foo: E;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D11' must use 'declare' to make it ambient.
    }
    
    function f() { }
    module f {
        export var bar = 1;
    }
    class D12 extends Base {
        foo: typeof f;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D12' must use 'declare' to make it ambient.
    }
    
    
    class c { baz: string }
    module c {
        export var bar = 1;
    }
    class D13 extends Base {
        foo: typeof c;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D13' must use 'declare' to make it ambient.
    }
    
    
    class D14<T> extends Base {
        foo: T;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D14<T>' must use 'declare' to make it ambient.
    }
    
    
    class D15<T, U> extends Base {
        foo: U;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D15<T, U>' must use 'declare' to make it ambient.
    }
    
    //class D15<T, U extends T> extends Base {
    //    foo: U;
    //}
    
    
    class D16 extends Base {
        foo: Object;
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D16' must use 'declare' to make it ambient.
    }
    
    
    class D17 extends Base {
        foo: {};
        ~~~
!!! error TS2610: Class 'Base' defines instance member property 'foo', so extended class 'D17' must use 'declare' to make it ambient.
    }
    